--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="initial-scale=1.0" />
     <title>Utopia React App</title>
     <!-- Begin Generated Utopia External Links -->
-    <link href="https://fonts.googleapis.com/css2?family=Aclonica:ital,wght@0,400" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Alata:ital,wght@0,400" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Alegreya+SC:ital,wght@0,700" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,700;0,600" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,wght@0,400;0,900" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400" rel="stylesheet">
     <!-- End Generated Utopia External Links -->
   </head>
   <body>
