--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="initial-scale=1.0" />
-    <title>Utopia React App</title>
-    <!-- Begin Generated Utopia External Links -->
-    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,wght@0,400;0,900" rel="stylesheet">
-    <!-- End Generated Utopia External Links -->
-  </head>
-  <body>
-    <div id="root"></div>
-  </body>
+
+<head>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>Utopia React App</title>
+	<!-- Begin Generated Utopia External Links -->
+	<link href="https://fonts.googleapis.com/css2?family=Inter:ital,wght@0,400;0,900" rel="stylesheet">
+	<!-- End Generated Utopia External Links -->
+</head>
+
+<body>
+	<div id="root"></div>
+</body>
+
 </html>
